fix video sizes on mobile and desktop

--- a/mikes-site/src/index.css
+++ b/mikes-site/src/index.css
@@ -82,3 +82,18 @@ body {
   color: rgb(20, 122, 238);
   background-color: rgb(255, 255, 255);
 }
+
+.modal-body {
+  position:relative;
+  padding:0px;
+}
+.close {
+  position:absolute;
+  right:-30px;
+  top:0;
+  z-index:999;
+  font-size:2rem;
+  font-weight: normal;
+  color:#fff;
+  opacity:1;
+}
